# mcapst

./: .gitignore  README.md  directory_structure.md  pyproject.toml  requirements.txt  setup.py  temp_config.yaml
legacy/: MattingLaplacian.py  SegReMapping.py  TemporalLoss.py  video_transfer.py
logs/: events.out.tfevents.1738622384.DESKTOP-JA23SVM.16000.0  events.out.tfevents.1738622481.DESKTOP-JA23SVM.5488.0  events.out.tfevents.1738622581.DESKTOP-JA23SVM.17412.0  events.out.tfevents.1738622660.DESKTOP-JA23SVM.18420.0  events.out.tfevents.1738622813.DESKTOP-JA23SVM.10784.0  events.out.tfevents.1738622966.DESKTOP-JA23SVM.1232.0  events.out.tfevents.1738623074.DESKTOP-JA23SVM.5244.0  events.out.tfevents.1738623252.DESKTOP-JA23SVM.11444.0  events.out.tfevents.1738623380.DESKTOP-JA23SVM.14664.0  events.out.tfevents.1738623456.DESKTOP-JA23SVM.1964.0  events.out.tfevents.1738642856.DESKTOP-JA23SVM.16764.0  events.out.tfevents.1738642896.DESKTOP-JA23SVM.14520.0  events.out.tfevents.1738643189.DESKTOP-JA23SVM.15164.0  events.out.tfevents.1738643284.DESKTOP-JA23SVM.14716.0  events.out.tfevents.1738643852.DESKTOP-JA23SVM.2012.0  events.out.tfevents.1738644385.DESKTOP-JA23SVM.18224.0  events.out.tfevents.1738644499.DESKTOP-JA23SVM.13780.0  events.out.tfevents.1738644604.DESKTOP-JA23SVM.6356.0  events.out.tfevents.1738644664.DESKTOP-JA23SVM.18060.0  events.out.tfevents.1738644719.DESKTOP-JA23SVM.14172.0  events.out.tfevents.1738689160.DESKTOP-JA23SVM.13492.0  events.out.tfevents.1738689974.DESKTOP-JA23SVM.4536.0  events.out.tfevents.1738690010.DESKTOP-JA23SVM.12208.0  (+20 more)
(+75 files in other folders)
